--- a/i3/config
+++ b/i3/config
@@ -4,10 +4,10 @@
 
 # Font for window titles. Will also be used by the bar unless a different font
 # is used in the bar {} block below.
-font pango:monospace 8
+font pango:Font Awesome 8.3
 
 # Modkey
-set $mod Mod4
+set $mod mod4
 
 
 # use these keys for focus, movement, and resize directions when reaching for
@@ -77,10 +77,10 @@ bindsym $mod+w layout tabbed
 bindsym $mod+e layout toggle split
 
 # toggle tiling / floating
-bindsym $mod+Shift+space floating toggle
+bindsym $mod+Shift+p floating toggle
 
 # change focus between tiling / floating windows
-bindsym $mod+space focus mode_toggle
+bindsym $mod+p focus mode_toggle
 
 # focus the parent container
 bindsym $mod+a focus parent
@@ -130,7 +130,7 @@ mode "resize" {
 
         # Pressing left will shrink the window’s width.
         # Pressing right will grow the window’s width.
-        # Pressing up will shrink the window’s height.
+        # Pressing up will shrink ./    the window’s height.
         # Pressing down will grow the window’s height.
         bindsym $left       resize shrink width 10 px or 10 ppt
         bindsym $down       resize grow height 10 px or 10 ppt
@@ -154,7 +154,9 @@ bindsym $mod+r mode "resize"
 # finds out, if available)
 bar {
   position top
-        status_command i3status
+  status_command i3status
+  # status_command conky -c $HOME/.i3/conky/conkyrc
+  
   colors {
     separator #666666
     background #000000
