--- a/i3status.conf
+++ b/i3status.conf
@@ -32,7 +32,8 @@ cpu_temperature 0 {
 }
 
 battery 0 {
-    format = " Battery: %percentage "
+    format = "⚡ %percentage "
+    last_full_capacity = true
 }
 
 volume master {
