--- a/i3/config
+++ b/i3/config
@@ -152,21 +152,21 @@ bindsym $mod+r mode "resize"
 
 # Start i3bar to display a workspace bar (plus the system information i3status
 # finds out, if available)
-bar {
-  position top
-  status_command i3status
-  # status_command conky -c $HOME/.i3/conky/conkyrc
-  
-  colors {
-    separator #666666
-    background #000000
-    statusline #ffffff
-    focused_workspace #551a8b #551a8b #ffffff
-    active_workspace #333333 #5f676a #ffffff
-    inactive_workspace #000000 #000000 #888888
-    urgent_workspace #2f343a #900000 #ffffff
-  }
-}
+#bar {
+#  position top
+#  # status_command i3status
+#  # status_command conky -c $HOME/.i3/conky/conkyrc
+#  
+#  colors {
+#    separator #666666
+#    background #000000
+#    statusline #ffffff
+#    focused_workspace #551a8b #551a8b #ffffff
+#    active_workspace #333333 #5f676a #ffffff
+#    inactive_workspace #000000 #000000 #888888
+#    urgent_workspace #2f343a #900000 #ffffff
+#  }
+#}
 
 
 ##### SELF MADE STUFF
@@ -182,9 +182,10 @@ exec --no-startup-id "$HOME/.i3/screen_setup.sh"
 exec --no-startup-id "$HOME/.i3/setup_workspace.sh"
 exec --no-startup-id compton -CGb
 exec --no-startup-id nitrogen --restore
+exec --no-startup-id "$HOME/.polybar/run_polybar.sh"
 
-gaps inner 5
-gaps outer 4
+gaps inner 8
+gaps outer 25
 
 #Enable lock timeout
 exec xautolock -time 6 -locker "$HOME/.i3/lock.sh $HOME/Pictures/Icons/lock.png" -notify 20 -notifier 'xset dpms force off' &
