--- a/i3/config
+++ b/i3/config
@@ -203,15 +203,18 @@ exec --no-startup-id compton -CGb
 exec --no-startup-id nitrogen --restore
 # exec --no-startup-id "$HOME/.polybar/run_polybar.sh"
 
-gaps inner 15
-gaps outer 20
+gaps inner 10
+gaps outer 15
 
 #Enable lock timeout
 exec xautolock -time 6 -locker "$HOME/.i3/lock.sh $HOME/Pictures/Icons/lock.png" -notify 20 -notifier 'xset dpms force off' &
 
-
 # Show network manager on i3Status bar
 exec --no-startup-id nm-applet
+
+#### Window Specific Controls
+for_window [class="^.*"] border pixel 1
+#for_window [class="Gnome-terminal"] border normal
 
 
 ##### Bindings
