--- a/i3/config
+++ b/i3/config
@@ -171,7 +171,7 @@ bindsym $mod+r mode "resize"
 
 bar {
   status_command          i3blocks -c ~/.i3/i3blocks.conf
-  tray_output             HDMI-2
+  tray_output             eDP-1
   position                top
   strip_workspace_numbers yes
   separator_symbol        "·"
