--- a/i3/i3blocks.conf
+++ b/i3/i3blocks.conf
@@ -1,24 +1,28 @@
-command=~/.i3/i3blocks-scripts/$BLOCK_NAME
+command=/usr/local/bin/i3blocks/$BLOCK_NAME
 separator_block_width=20
+separator=false
 color=#F3F4F5
 markup=none
+
+[spotify]
+command=~/.i3/i3blocks-scripts/spotify
+interval=1
+color=#8CE000
 
 [volume]
 label=🔉
 command=amixer -D pulse | awk '$1=="Front"{print $5;exit;}' | sed 's/[][]//g'
 interval=1
 
-[ram]
-label=
-command=~/.i3/i3blocks-scripts/memory | grep -E -o '[0-9].[0-9]?G'
-interval=30
+[cpu]
+command=~/.i3/i3blocks-scripts/cpu_usage
+interval=1
 
-[disk-home]
-label=
-command=df -h -P -l $HOME | awk '/\/.*/ { print $3; exit 0 }'
-interval=30
+[ram]
+command=~/.i3/i3blocks-scripts/memory
+interval=1
 
 [time]
-label=🕘
-command=date '+%a, %d %b %l:%M'
-interval=5
+command=date '+%l:%M %A %d of %B'
+interval=1
+color=#DC143C
