--- a/i3/config
+++ b/i3/config
@@ -27,16 +27,8 @@ bindsym $mod+Return exec i3-sensible-terminal
 bindsym $mod+Shift+q kill
 
 # start rofi
-bindsym $mod+d       exec "rofi -modi drun -show drun -theme royal-sky"
-bindsym $mod+Shift+d exec "rofi -show ssh -theme royal-sky"
-
-
-# start dmenu (a program launcher)
-# bindsym $mod+d exec dmenu_run
-# There also is the (new) i3-dmenu-desktop which only displays applications
-# shipping a .desktop file. It is a wrapper around dmenu, so you need that
-# installed.
-# bindsym $mod+d exec --no-startup-id i3-dmenu-desktop
+bindsym $mod+space       exec "rofi -modi drun -show drun -theme royal-sky"
+bindsym $mod+Shift+space exec "rofi -show ssh -theme royal-sky"
 
 # change focus
 bindsym $mod+$left focus left
@@ -169,24 +161,24 @@ bindsym $mod+r mode "resize"
 #}
 
 
-bar {
-  status_command          i3blocks -c ~/.i3/i3blocks.conf
-  tray_output             DP1
-  position                top
-  strip_workspace_numbers yes
-  separator_symbol        "·"
-  workspace_buttons       yes
-
-  colors {
-    separator #666666
-    background #000000
-    statusline #ffffff
-    focused_workspace #551a8b #551a8b #ffffff
-    active_workspace #333333 #5f676a #ffffff
-    inactive_workspace #000000 #000000 #888888
-    urgent_workspace #2f343a #900000 #ffffff
-  }
-}
+#bar {
+#  status_command          i3blocks -c ~/.i3/i3blocks.conf
+#  tray_output             DP1
+#  position                top
+#  strip_workspace_numbers yes
+#  separator_symbol        "·"
+#  workspace_buttons       yes
+#
+#  colors {
+#    separator #666666
+#    background #000000
+#    statusline #ffffff
+#    focused_workspace #551a8b #551a8b #ffffff
+#    active_workspace #333333 #5f676a #ffffff
+#    inactive_workspace #000000 #000000 #888888
+#    urgent_workspace #2f343a #900000 #ffffff
+#  }
+#}
 
 ##### SELF MADE STUFF
 
@@ -196,7 +188,8 @@ exec --no-startup-id "$HOME/.i3/setup_workspace.sh"
 exec --no-startup-id compton -CGb
 exec --no-startup-id synergy
 exec --no-startup-id nitrogen --restore
-# exec --no-startup-id "$HOME/.polybar/run_polybar.sh"
+exec --no-startup-id "$HOME/.polybar/run_polybar.sh"
+exec --no-startup-id "xrdb $HOME/.Xresources/config" #Enable rofi theme
 
 gaps inner 0
 gaps outer 0
