--- a/polybar/config
+++ b/polybar/config
@@ -307,7 +307,7 @@ format-prefix = " "
 format-prefix-foreground = ${colors.foreground-alt}
 format-underline = #f90000
 label = "%output:0:100%"
-exec = ssh snellin@snellin.aka.corp.amazon.com echo CPU: `top -b -n1 | grep "Cpu(s)" | awk '{print $2 + $4}'`
+exec = ssh snellin@snellin.aka.corp.amazon.com echo CPU: `top -b -n1 | grep "Cpu(s)" | awk '{print $2 + $4}'`%
   FREE_DATA=`free -m | grep Mem`
   CURRENT=`echo $FREE_DATA | cut -f3 -d' '`
   TOTAL=`echo $FREE_DATA | cut -f2 -d' '`
