--- a/i3/config
+++ b/i3/config
@@ -5,6 +5,9 @@
 # Font for window titles. Will also be used by the bar unless a different font
 # is used in the bar {} block below.
 font pango:Font Awesome 8.3
+#font pango:Ubuntu Display 5
+#font pango:Dejavu Sans Mono 14
+
 
 # Modkey
 set $mod mod4
@@ -93,6 +96,17 @@ bindsym $mod+6 workspace 6
 bindsym $mod+7 workspace 7
 bindsym $mod+8 workspace 8
 bindsym $mod+9 workspace 9
+bindsym $mod+0 workspace 10
+bindsym $mod+Control+1 workspace 11
+bindsym $mod+Control+2 workspace 12
+bindsym $mod+Control+3 workspace 13
+bindsym $mod+Control+4 workspace 14
+bindsym $mod+Control+5 workspace 15
+bindsym $mod+Control+6 workspace 16
+bindsym $mod+Control+7 workspace 17
+bindsym $mod+Control+8 workspace 18
+bindsym $mod+Control+9 workspace 19
+bindsym $mod+Control+0 workspace 20
 
 # move focused container to workspace
 bindsym $mod+Shift+1 move container to workspace 1
@@ -104,6 +118,17 @@ bindsym $mod+Shift+6 move container to workspace 6
 bindsym $mod+Shift+7 move container to workspace 7
 bindsym $mod+Shift+8 move container to workspace 8
 bindsym $mod+Shift+9 move container to workspace 9
+bindsym $mod+Shift+0 move container to workspace 10
+bindsym $mod+Control+Shift+1 move container to workspace 11
+bindsym $mod+Control+Shift+2 move container to workspace 12
+bindsym $mod+Control+Shift+3 move container to workspace 13
+bindsym $mod+Control+Shift+4 move container to workspace 14
+bindsym $mod+Control+Shift+5 move container to workspace 15
+bindsym $mod+Control+Shift+6 move container to workspace 16
+bindsym $mod+Control+Shift+7 move container to workspace 17
+bindsym $mod+Control+Shift+8 move container to workspace 18
+bindsym $mod+Control+Shift+9 move container to workspace 19
+bindsym $mod+Control+Shift+0 move container to workspace 20
 
 # reload the configuration file
 bindsym $mod+Shift+c reload
@@ -144,7 +169,7 @@ bindsym $mod+r mode "resize"
 #  position top
 #  # status_command i3status
 #  # status_command conky -c $HOME/.i3/conky/conkyrc
-#
+
 #  colors {
 #    separator #666666
 #    background #000000
@@ -156,37 +181,38 @@ bindsym $mod+r mode "resize"
 #  }
 #}
 
+bar {
+  status_command          i3blocks -c ~/.i3/i3blocks.conf
+  tray_output             DP2
+  position                top
+  strip_workspace_numbers yes
+  separator_symbol        "·"
+  workspace_buttons       yes
 
-#bar {
-#  status_command          i3blocks -c ~/.i3/i3blocks.conf
-#  tray_output             DP1
-#  position                top
-#  strip_workspace_numbers yes
-#  separator_symbol        "·"
-#  workspace_buttons       yes
-#
-#  colors {
-#    separator #666666
-#    background #000000
-#    statusline #ffffff
-#    focused_workspace #551a8b #551a8b #ffffff
-#    active_workspace #333333 #5f676a #ffffff
-#    inactive_workspace #000000 #000000 #888888
-#    urgent_workspace #2f343a #900000 #ffffff
-#  }
-#}
+  colors {
+    separator #666666
+    background #000000
+    statusline #ffffff
+    focused_workspace #551a8b #551a8b #ffffff
+    active_workspace #333333 #5f676a #ffffff
+    inactive_workspace #000000 #000000 #888888
+    urgent_workspace #2f343a #900000 #ffffff
+  }
+}
 
 ######################### SELF MADE STUFF #############################################
 
 #Setup Screen
 exec --no-startup-id "$HOME/.i3/screen_setup.sh"
 exec --no-startup-id "$HOME/.i3/setup_workspace.sh"
-exec --no-startup-id compton -cGb
+exec --no-startup-id compton -cGb --config ~/.config/compton/compton.conf
 exec --no-startup-id synergy
 exec --no-startup-id nitrogen --restore
-exec --no-startup-id "$HOME/.polybar/run_polybar.sh"
+#exec --no-startup-id "$HOME/.polybar/run_polybar.sh"
 exec --no-startup-id "xrdb $HOME/.Xresources/config" #Enable rofi theme
 exec --no-startup-id "xset r rate 300 60" # set keypress delay and rate
+exec --no-startup-id "imwheel -b \"4 5 6 7\"" # Increase sideways scroll speed and ignore buttons
+exec_always --no-startup-id flashfocus
 
 gaps inner 0
 gaps outer 0
