--- a/i3/i3blocks.conf
+++ b/i3/i3blocks.conf
@@ -1,21 +1,30 @@
-command=/usr/local/bin/i3blocks/$BLOCK_NAME
+#  _ _____ _     _            _
+# (_)___ /| |__ | | ___   ___| | _____
+# | | |_ \| '_ \| |/ _ \ / __| |/ / __|
+# | |___) | |_) | | (_) | (__|   <\__ \
+# |_|____/|_.__/|_|\___/ \___|_|\_\___/
+
+
+# command=/usr/local/bin/i3blocks/$BLOCK_NAME
+command=~/.i3/i3blocks-scripts/$BLOCK_NAME
 separator_block_width=20
 separator=false
 color=#F3F4F5
-markup=none
+markup=pango
 
 [spotify]
 command=~/.i3/i3blocks-scripts/spotify
 interval=1
 color=#8CE000
 
-[volume]
-label=🔉
-command=amixer -D pulse | awk '$1=="Front"{print $5;exit;}' | sed 's/[][]//g'
-interval=1
+# [volume]
+# label=🔉
+# command=~/.i3/i3blocks-scripts/volume "5%" default
+# command=amixer -D pulse | awk '$1=="Front"{print $5;exit;}' | sed 's/[][]//g'
+# interval=1
 
 [cpu]
-command=~/.i3/i3blocks-scripts/cpu_usage
+command=~/.i3/i3blocks-scripts/cpuBlock
 interval=1
 
 [ram]
@@ -23,6 +32,8 @@ command=~/.i3/i3blocks-scripts/memory
 interval=1
 
 [time]
-command=date '+%l:%M %A %d of %B'
-interval=1
-color=#DC143C
+# command=printf "\\uf271 " && date '+%l:%M %A %d of %B'
+command=~/.i3/i3blocks-scripts/dateBlock
+interval=60
+# color=#DC143C
+color=#ff79c6
