--- a/i3/config
+++ b/i3/config
@@ -160,23 +160,39 @@ mode "resize" {
         bindsym Escape mode "default"
 }
 
+
 bindsym $mod+r mode "resize"
+
+mode "display" {
+
+        bindsym d exec "~/dotfiles/dell/default-display-settings.sh &"
+        bindsym a exec "~/dotfiles/dell/dell_setup.sh &"
+
+        # back to normal: Enter or Escape
+        bindsym Return mode "default"
+        bindsym Escape mode "default"
+}
+
+bindsym $mod+d mode "display"
+
 
 ######################### STARTUP STUFF #############################################
 
 #exec --no-startup-id "$HOME/.i3/screen_setup.sh"
 #exec --no-startup-id "$HOME/.i3/setup_workspace.sh"
+#exec --no-startup-id "$HOME/dotiles/dell/home_display_testing.sh"
 exec --no-startup-id compton -cGb --config ~/.config/compton/compton.conf
 exec --no-startup-id nitrogen --restore
 exec --no-startup-id "$HOME/.config/polybar/launch.sh"
 exec --no-startup-id "xrdb $HOME/.Xresources"
 exec --no-startup-id "xmodmap $HOME/.xmodmap"
-exec --no-startup-id "xset r rate 300 60" # set keypress delay and rate
+exec --no-startup-id "xset r rate 200 80" # set keypress delay and rate
+exec --no-startup-id dunst 
 exec_always --no-startup-id flashfocus
 
 # Programs needed for MX Master mouse
-#exec --no-startup-id solaar
-#exec --no-startup-id "imwheel -b \"4 5 6 7\"" # Increase sideways scroll speed and ignore buttons
+exec --no-startup-id ~/tools/Solaar/bin/solaar
+exec --no-startup-id "imwheel -b \"4 5 6 7\"" # Increase sideways scroll speed and ignore buttons
 
 # Show network manager on i3Status bar
 exec --no-startup-id nm-applet
@@ -211,15 +227,15 @@ bindsym $mod+Control+$left exec "python $HOME/.i3/workspace_move.py left"
 bindsym $mod+Control+$right exec "python $HOME/.i3/workspace_move.py right"
 
 # start rofi
-bindsym $mod+space       exec "rofi -modi drun -show drun -theme extra"
-bindsym $mod+Shift+space exec "rofi -show ssh -theme extra"
+bindsym $mod+space       exec "rofi -modi drun -show drun -theme ~/.rofi/slate -show-icons"
+bindsym $mod+Shift+space exec "rofi -show ssh -theme ~/.rofi/slate"
 
 bindsym $mod+Shift+greater move container to output right
 bindsym $mod+Shift+less move container to output left
 
 # Media Keys
-bindsym XF86AudioRaiseVolume exec pactl set-sink-volume alsa_output.pci-0000_00_1f.3.analog-stereo +10%
-bindsym XF86AudioLowerVolume exec pactl set-sink-volume alsa_output.pci-0000_00_1f.3.analog-stereo -10%
+bindsym XF86AudioRaiseVolume exec pactl set-sink-volume alsa_output.pci-0000_00_1f.3.analog-stereo +3%
+bindsym XF86AudioLowerVolume exec pactl set-sink-volume alsa_output.pci-0000_00_1f.3.analog-stereo -3%
 bindsym XF86AudioMute exec pactl set-sink-mute alsa_output.pci-0000_00_1f.3.analog-stereo toggle
 
 # Spotfiy Controls
@@ -245,3 +261,17 @@ client.urgent           #2f343a #900000 #ffffff #900000
 # Exec DELL XPS specific stuff 
 exec --no-startup-id "$HOME/dotfiles/dell/dell_setup.sh"
 
+workspace 1 output eDP-1
+workspace 2 output eDP-1
+workspace 3 output eDP-1
+workspace 4 output DP-2
+workspace 5 output DP-2
+workspace 6 output DP-2
+workspace 7 output DP-2
+workspace 8 output DP-2
+workspace 9 output DP-6
+workspace 10 output DP-6
+workspace 17 output eDP-1
+workspace 18 output eDP-1
+workspace 19 output eDP-1
+workspace 20 output eDP-1
