--- a/i3/config
+++ b/i3/config
@@ -189,10 +189,11 @@ exec --no-startup-id "xrdb $HOME/.Xresources"
 exec --no-startup-id "xmodmap $HOME/.xmodmap"
 exec --no-startup-id "xset r rate 200 80" # set keypress delay and rate
 exec --no-startup-id dunst 
+exec --no-startup-id davmail
 exec_always --no-startup-id flashfocus
 
 # Programs needed for MX Master mouse
-exec --no-startup-id "~/tools/Solaar/bin/solaar --restart-on-wake-up"
+exec --no-startup-id "solaar --restart-on-wake-up"
 exec --no-startup-id "imwheel -b \"4 5 6 7\"" # Increase sideways scroll speed and ignore buttons
 
 # Show network manager on i3Status bar
@@ -204,7 +205,9 @@ exec --no-startup-id gsettings set org.gnome.desktop.background show-desktop-ico
 ######################### SELF MADE STUFF #############################################
 
 # bindsym $mod+shift+0 exec "$home/.i3/lock.sh $home/pictures/icons/lock.png
-bindsym Scroll_Lock exec "xautolock -locknow -detectsleep -locker $HOME/.i3/lock/test_lock_2.sh"
+#bindsym Scroll_Lock exec "xautolock -locknow -detectsleep -locker $HOME/.i3/lock/test_lock_2.sh"
+bindsym Scroll_Lock exec "systemctl suspend"
+
 ##Enable lock timeout
 exec xautolock -time 10 -detectsleep -locker "$HOME/.i3/lock/timeout_lock.sh" -notify 20 -notifier 'xset dpms force off' &
 
@@ -234,7 +237,7 @@ bindsym $mod+Shift+less move container to output left
 bindsym XF86AudioRaiseVolume exec pactl set-sink-volume alsa_output.pci-0000_00_1f.3.analog-stereo +3%
 bindsym XF86AudioLowerVolume exec pactl set-sink-volume alsa_output.pci-0000_00_1f.3.analog-stereo -3%
 bindsym XF86AudioMute exec pactl set-sink-mute alsa_output.pci-0000_00_1f.3.analog-stereo toggle
-bindsym $mod+m exec pactl set-source-mute 1 toggle
+bindsym $mod+m exec pactl set-source-mute alsa_input.pci-0000_00_1f.3.analog-stereo toggle
 
 # Spotfiy Controls
 bindsym XF86AudioPlay exec dbus-send --print-reply --dest=org.mpris.MediaPlayer2.spotify /org/mpris/MediaPlayer2 org.mpris.MediaPlayer2.Player.PlayPause
@@ -256,19 +259,18 @@ client.urgent           #2f343a #900000 #ffffff #900000
 # Exec DELL XPS specific stuff 
 exec --no-startup-id "$HOME/dotfiles/dell/dell_setup.sh"
 
-workspace 1 output DP-2
-workspace 2 output DP-2
-workspace 3 output DP-2
-workspace 4 output DP-2
-workspace 5 output DP-2
-workspace 6 output DP-2
-workspace 7 output DP-2
-workspace 8 output DP-2
-workspace 9 output DP-4
-workspace 10 output DP-4
-workspace 15 output eDP-1
-workspace 16 output eDP-1
-workspace 17 output eDP-1
-workspace 18 output eDP-1
-workspace 19 output eDP-1
-workspace 20 output eDP-1
+workspace 1 output eDP-1
+workspace 2 output eDP-1
+workspace 3 output eDP-1
+workspace 4 output eDP-1
+#workspace 5 output DP-4
+#workspace 6 output DP-4
+#workspace 7 output DP-4
+#workspace 8 output DP-4
+workspace 5 output DP-1-1
+workspace 6 output DP-1-1
+workspace 7 output DP-1-1
+workspace 8 output DP-1-1
+workspace 9 output DP-2
+workspace 10 output DP-2
+workspace 20 output DP-2
