--- a/tmux.conf
+++ b/tmux.conf
@@ -33,7 +33,7 @@ bind-key -n C-h select-pane -L
 bind-key -n C-j select-pane -D
 bind-key -n C-k select-pane -U
 bind-key -n C-l select-pane -R
-bind-key -n C-\ select-pane -l
+# bind-key -n C-\ select-pane -l
 
 # Bind the copy-mode key
 bind-key / copy-mode
