--- a/config-dots/polybar/config.ini
+++ b/config-dots/polybar/config.ini
@@ -160,10 +160,10 @@ font-2 = "FontAwesome:style=Regular;0"
 
 modules-left = i3
 modules-center = spotify 
-modules-right = microphone pulseaudio_i pulseaudio separator battery_i battery separator nm_wifi_i nm_wifi separator nm_eth_i nm_eth separator date_i date separator sysmenu_i 
+modules-right = nm_eth_i nm_eth separator nm_wifi_i nm_wifi separator microphone pulseaudio_i pulseaudio separator battery_i battery separator date_i date separator sysmenu_i 
 
 ; The separator will be inserted between the output of each module
-separator =
+separator = 
 
 ; This value is used to add extra spacing between elements
 ; @deprecated: This parameter will be removed in an upcoming version
@@ -405,10 +405,10 @@ font-1 = "Siji:size=32;2"
 
 modules-left = i3
 modules-center = spotify 
-modules-right = microphone pulseaudio_i pulseaudio separator battery_i battery separator nm_wifi_i nm_wifi separator nm_eth_i nm_eth separator date_i date separator sysmenu_i 
+modules-right = nm_eth_i nm_eth separator nm_wifi_i nm_wifi separator microphone pulseaudio_i pulseaudio separator battery_i battery separator date_i date separator sysmenu_i 
 
 ; The separator will be inserted between the output of each module
-separator =
+separator = 
 
 ; This value is used to add extra spacing between elements
 ; @deprecated: This parameter will be removed in an upcoming version
