--- a/config-dots/polybar/modules.ini
+++ b/config-dots/polybar/modules.ini
@@ -54,7 +54,8 @@ format-padding = 1
 
 [module/nm_eth]
 type = custom/script
-exec = "nmcli d show enx1062e5f26f2c | grep 'GENERAL.CONNECTION' | awk '{ print $2 }'"
+exec = "nmcli d show enx1062e5f26f2c 2> /dev/null | grep 'GENERAL.CONNECTION' | awk '{ print $2 }'"
+exec-if = nmcli d | grep enx
 interval = 1.0
 
 format = <label>
@@ -65,6 +66,7 @@ format-padding = 1
 [module/nm_eth_i]
 type = custom/script
 exec = "nmcli d show enx1062e5f26f2c | grep 'GENERAL.CONNECTION' | awk '{ print $2 }'"
+exec-if = nmcli d | grep enx
 interval = 1.0
 
 ;; format = 
