--- a/i3/config
+++ b/i3/config
@@ -28,6 +28,10 @@ set $ws19 "19"
 set $ws20 "20"
 set $ws34 "34"
 
+set $laptopMon eDP-1
+set $wsLeftMon DP-1-2
+set $wsRightMon DP-2
+
 # use Mouse+$mod to drag floating windows to their wanted position
 floating_modifier $mod
 
@@ -241,9 +245,9 @@ bindsym $mod+Shift+greater move container to output right
 bindsym $mod+Shift+less move container to output left
 
 # Media Keys
-bindsym XF86AudioRaiseVolume exec pactl set-sink-volume alsa_output.pci-0000_00_1f.3.analog-stereo +3%
-bindsym XF86AudioLowerVolume exec pactl set-sink-volume alsa_output.pci-0000_00_1f.3.analog-stereo -3%
-bindsym XF86AudioMute exec pactl set-sink-mute alsa_output.pci-0000_00_1f.3.analog-stereo toggle
+bindsym XF86AudioRaiseVolume exec pactl set-sink-volume @DEFAULT_SINK@ +3%
+bindsym XF86AudioLowerVolume exec pactl set-sink-volume @DEFAULT_SINK@ -3%
+bindsym XF86AudioMute exec pactl set-sink-mute @DEFAULT_SINK@ toggle
 bindsym $mod+m exec pactl set-source-mute alsa_input.pci-0000_00_1f.3.analog-stereo toggle
 
 # Spotfiy Controls
@@ -258,18 +262,13 @@ bindsym XF86MonBrightnessDown exec brightnessctl s 10000-
 
 # Coloring
 ##                       border  backgr. text    indicator child_border
-client.focused          #555555 #555555 #ffffff #2e9ef4 #CC0000
+client.focused          #555555 #555555 #ffffff #2e9ejf4 #CC0000
 client.focused_inactive #333333 #5f676a #ffffff #484e50
 client.unfocused        #222222 #222222 #888888 #292d2e
 client.urgent           #2f343a #900000 #ffffff #900000
 
 # Exec DELL XPS specific stuff 
 exec --no-startup-id "$HOME/dotfiles/dell/dell_setup.sh"
-
-set $laptopMon eDP-1
-set $wsLeftMon DP-1-2
-set $wsRightMon DP-2
-
 
 workspace $ws1 output $laptopMon
 workspace $ws2 output $laptopMon
@@ -288,5 +287,8 @@ workspace $ws12 output $wsRightMon
 workspace $ws13 output $wsRightMon
 workspace $ws14 output $wsRightMon
 workspace $ws15 output $wsRightMon
+workspace $ws16 output $wsRightMon
+workspace $ws17 output $wsRightMon
+workspace $ws18 output $wsRightMon
 workspace $ws19 output $wsRightMon
 workspace $ws20 output $wsRightMon
