--- a/i3/config
+++ b/i3/config
@@ -262,7 +262,7 @@ bindsym XF86MonBrightnessDown exec brightnessctl s 10000-
 
 # Coloring
 ##                       border  backgr. text    indicator child_border
-client.focused          #555555 #555555 #ffffff #2e9ejf4 #CC0000
+client.focused          #555555 #555555 #ffffff #2e9ef4 #CC0000
 client.focused_inactive #333333 #5f676a #ffffff #484e50
 client.unfocused        #222222 #222222 #888888 #292d2e
 client.urgent           #2f343a #900000 #ffffff #900000
